# Egg-Runner

./: .gitignore  CMakeLists.txt  README.md  egg-runner.cmake.in  egg-runner.pc.in
documentation/: ToDo
include/: CMakeLists.txt  common.h.in
include/egg/runner/: credentials.hpp  environment.hpp  filesystem.hpp  runner.hpp  signal.hpp
module/: ConfigureSystem.cmake
source/: CMakeLists.txt  credentials.cpp  environment.cpp  filesystem.cpp  runner.cpp  signal.cpp
test/: CMakeLists.txt  t01.cpp  t02.cpp  t03.cpp
